<resources>
    <string name="app_name">Control de Procesos MetMex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marcos Moreno</string>
    <string name="nav_header_subtitle">marcos.moreno@penoles.com.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_eventos">Administración de Eventos</string>
    <string name="menu_proyectos">Administración de Proyectos</string>
    <string name="menu_convenios">Convenios de Soporte</string>
    <string name="menu_utilerias">Utilerías de Apoyo</string>
    <string name="menu_refacciones">Inventario de Refacciones</string>
    <string name="menu_equipocomputo">Inventario de Cómputo</string>
    <string name="menu_medicionetiquetado">Medición y Etiquetado</string>

    <string name="toolbar_title_reporte_evento">Reporte de Evento</string>

    <string name="telefono_guardia">+52 87 1234 5119</string>
    <string name="email_guardia"><a href="guardia.cp@gmail.com">guardia.cp@gmail.com</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="cancel_text">Cancelar</string>
    <string name="save_text">Guardar</string>

</resources>